--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.12.0
-pandas==1.3.3
-scikit-learn==0.24.2
-matplotlib==3.4.3
-numpy==1.21.2
+streamlit==1.33.0
+pandas>=2.0.0
+scikit-learn>=1.3.0
+matplotlib>=3.8.0
+numpy>=1.26.0
